[project]
name = "test-python-lib-copy"
version = "0.1"
description = "null"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Chris Hicks"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [

]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/cjhicks/test-python-lib-copy"
Changelog = "https://github.com/cjhicks/test-python-lib-copy/releases"
Issues = "https://github.com/cjhicks/test-python-lib-copy/issues"
CI = "https://github.com/cjhicks/test-python-lib-copy/actions"


[project.optional-dependencies]
test = ["pytest"]
